# black-widow

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
src/: lib.rs  main.rs
src/config/: mod.rs  question.rs
src/core/: mod.rs
src/processor/: mod.rs
src/processor/crawl/: mod.rs
src/resource/: http_endpoint.rs  mod.rs
