[package]
name = "black-widow"
version = "0.1.0"
authors = ["KNOXDEV <nick@knox.codes>"]
description = "all-purpose web security crawler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
hyper = "0.14.23"
clap = { version = "4.0.26", features = ["derive"] }
async-trait = "0.1.58"
